--- a/test-output/old/NopCommerce/reporter-output.html
+++ b/test-output/old/NopCommerce/reporter-output.html
@@ -1,1 +1,7 @@
-<h2>Reporter output</h2><table></table>
+<h2>Reporter output</h2><table><tr><td>[INFO ] [2022-12-01 15:48:44,666] Pre-Condition - Step 01: Navigate to Login Button
+<br></td></tr>
+<tr><td>[INFO ] [2022-12-01 15:48:45,484] Pre-Condition - Step 02: Set Cookies and reload page
+<br></td></tr>
+<tr><td>[INFO ] [2022-12-01 15:48:49,001] Pre-Condition - Step 03:  Verify Login Success
+<br></td></tr>
+</table>
